[project]
name = "align-tools"
version = "1.2.0"
description = "Monorepo for align-system support tools and utilities"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "PaulHax"},
]
dependencies = [
    "align-utils",
    "align-track",
]

[tool.uv.sources]
align-utils = { workspace = true }
align-track = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "python-semantic-release>=9.0",
    "types-PyYAML>=6.0",
]

[tool.semantic_release]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "echo 'Monorepo release'"
commit_parser = "conventional"
tag_format = "v{version}"
